--- a/b_CSS/0405/styles/c_practice.css
+++ b/b_CSS/0405/styles/c_practice.css
@@ -21,3 +21,39 @@ a:active {
   color: yellow;
   background-color: black;
 }
+
+/* 예제 실습 */
+/* 
+a:link {
+  color: blue;
+}
+
+a:visited {
+  color: purple;
+} 
+*/
+
+#hoverButton:hover {
+  color: white;
+  background-color: red;
+}
+
+#activeButton:active {
+  color: black;
+  background-color: yellow;
+}
+
+/* 
+input[id="focusInput"]:focus {
+  border: 2px solid green;
+}  
+*/
+
+input[type="checkbox"]:checked + label {
+  background-color: yellow;
+}
+
+input:disabled {
+  color: white;
+  background-color: gray;
+}
