--- a/b_CSS/0417/실습01.css
+++ b/b_CSS/0417/실습01.css
@@ -1,4 +1,40 @@
 /* b_media_queries.css */
+/*
+! :root
+  - CSS에서 문서 트리의 루트 요소를 선택하는 선택자
+  - HTML에서는 <html> 요소가 루트 요소
+  
+  : 전역 CSS 변수를 정의하여 페이지 전체에서 일관된 색상 및 스타일 값을 사용
+    >> 문서의 어느 곳에서나 접근 가능
+
+! 전역 변수의 장점
+  - 재사용성: 일관된 스타일 값(색상, 폰트, 간격 등)을 여러 위치에서 사용 가능
+  - 유지보수: 디자인 변경이 필요할 때, 변수 값만 수정하면 연결된 모든 요소의 스타일이 자동으로 업데이트
+  - 가독성: 색상 코드나 숫자 대신 의미 있는 이름을 사용하여 스타일 시트의 가독성을 향상
+
+! var() 함수
+  : (전역)변수의 값을 가져오는 데 사용
+  : 괄호 안에 변수 이름을 인수로 사용하며, 필요한 경우 두 번째 인수로 기본값을 지정 가능
+  : 변수 값이 유효하지 않거나 정의되지 않은 경우 기본값이 사용
+*/
+:root {
+  /* 주요 메인 배경색 */
+  --main-bg-color: rgba(207, 232, 220, 0.2);
+  /* 강조 배경색 (호버) */
+  --highlight-bg-color: rgba(207, 232, 220, 0.7);
+  /* 사이드바 배경색 */
+  --sidebar-bg-color: rgba(207, 232, 220, 0.5);
+  /* 링크 색상 */
+  --link-color: #333;
+  /* 테두리 색상 */
+  --border-color: rgb(79, 185, 227);
+  /* 강조 테두리 배경색 */
+  --border-highlight: rgba(79, 185, 227, 0.3);
+  /* 기본 테두리 색상 */
+  --default-border: #666;
+  /* 푸터 테두리 색상 */
+  --footer-border-color: #ccc;
+}
 
 * {
   box-sizing: border-box;
