--- a/b_CSS/0418/kakaoOven/styles/main.css
+++ b/b_CSS/0418/kakaoOven/styles/main.css
@@ -38,3 +38,115 @@ header {
   font-weight: 600;
   color: #aaa;
 }
+
+.nav {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.dropdown-toggle {
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+
+.profile-image {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+
+.dropdown-toggle .name {
+  padding: 0px 10px;
+}
+
+.dropdown-toggle .fa-caret-down {
+  font-size: 11px;
+}
+
+/*! main 영역 */
+.page-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 9px;
+}
+
+.pull-left {
+  margin: 20px 0px 10px;
+  font-size: 36px;
+  font-weight: 400;
+}
+
+.pull-right {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 25px;
+  height: 34px;
+  width: 325px;
+}
+
+.search-project {
+  position: relative;
+  width: 226.5px;
+  height: 34px;
+}
+
+.form-control {
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 6px 42.5px 6px 12px;
+  width: 226.5px;
+  height: 34px;
+  background-color: #fff;
+  color: #555;
+}
+
+.search-project .fa-magnifying-glass {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 34px;
+  height: 34px;
+}
+
+.form-control:focus {
+  border-color: #2fafff;
+  outline: 0;
+}
+
+.btn-toggle {
+  display: flex;
+  align-items: center;
+  width: 80px;
+  height: 34px;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+}
+
+.change-viewtype {
+  background-color: #fff;
+  color: #333;
+  border: none;
+  width: 39px;
+  height: 32px;
+  padding: 6px 12px;
+  cursor: pointer;
+}
+
+.btn-toggle .change-viewtype:first-child {
+  border-right: 1px solid #ccc;
+}
+
+.active {
+  background: radial-gradient(circle, white, #f0f0f0, #ccc);
+}
+
+.change-viewtype:not([type=active]):hover {
+  background-color: #e6e6e6;
+}
