--- a/b_CSS/0419/포트폴리오/정답.css
+++ b/b_CSS/0419/포트폴리오/정답.css
@@ -69,7 +69,9 @@ nav ul li a:hover, nav ul li a:focus {
   color: white; /* 텍스트 색상 */
   border-color: var(--accent-color); /* 테두리 색상 */
   border-radius: 5px; /* 테두리 둥글게 */
-  transform: translateY(-3px); /* 위로 3px 이동 */
+
+  /*! 실행되지 않는 로직입니다. 생략하셔도 됩니다.*/
+  /* transform: translateY(-3px); 위로 3px 이동 */
 }
 
 section h2 {
