--- a/my-app/src/components/slider/Slider.css
+++ b/my-app/src/components/slider/Slider.css
@@ -1,6 +1,7 @@
 .slider {
   position: relative;
   width: 100%;
+  height: 100%;
   max-width: 600px;
   margin: auto;
   overflow: hidden;
@@ -18,5 +19,6 @@
 
 img {
   width: 100%;
+  height: 100%;
   vertical-align: middle;
 }
